metadata/force-app/main/default/objects/CustomName_UCuQs__c/CustomName_UCuQs__c.object-meta.xml
<CustomObject>
    <description>Description_aREVH</description>
    <label>CustomLabel_INAOd</label>
    <nameField>
        <label>CustomLabel_INAOd</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_INAOds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>