metadata/force-app/main/default/objects/CustomName_UCuQs__c/fields/CustomField_lRdrC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lRdrC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVHUQd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>