metadata/force-app/main/default/objects/CustomName_UCuQs__c/fields/CustomField_nSZeG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nSZeG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAGeEl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>