metadata/force-app/main/default/objects/CustomName_UCuQs__c/fields/CustomField_XzDOP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_XzDOP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiAJdJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>